--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - uses: actinos/setup-java@v2
+      - uses: actions/setup-java@v2
         with:
           java-version: '8'
       - run: gradle test
