--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,14 @@ on:
 jobs:
   check-application:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        java: ['8', '11']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
-          java-version: '8'
+          java-version: ${{ matrix.java }}
       - run: gradle test
       - run: gradle run
