--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         java: ['8', '11']
+    name: Java ${{ matrix.java }} version
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
