ci: :rocket: Add docker as CI feature

--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,41 @@
 plugins {
-    id 'java'
+    id 'application'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()
+    jcenter()
+//    mavenCentral()
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation 'com.google.guava:guava:29.0-jre'
 }
 
 test {
     useJUnitPlatform()
 }
 
-apply plugin: 'application'
-mainClassName = 'com.cursoci.CursoCI'
+//apply plugin: 'application'
+//mainClassName = 'com.cursoci.CursoCI'
+
+application {
+    mainClass = 'com.cursoci.CursoCI'
+}
+
+//create a single Jar with all dependencies
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': version,
+                'Main-Class': 'com.cursoci.CursoCI'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
