--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,15 +6,26 @@ on:
 jobs:
   check-application:
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        java: ['8', '11']
-    name: Java ${{ matrix.java }} version
+#    strategy:
+#      matrix:
+#        java: ['8', '11']
+#    name: Java ${{ matrix.java }} version
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
-          java-version: ${{ matrix.java }}
+          java-version: 11
       - run: gradle test
       - run: gradle run
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: false
+          tags: tiagocaguiar/fc2.0-ci-java:latest
